Done with lesson 8 in Kotlin

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -21,10 +21,10 @@
         android:name="com.marsrealestate.detail.DetailFragment"
         android:label="fragment_detail"
         tools:layout="@layout/fragment_detail">
-<!--        <argument-->
-<!--            android:name="selectedProperty"-->
-<!--            app:argType="com.marsrealestate.network.MarsProperty"-->
-<!--            />-->
+        <argument
+            android:name="selectedProperty"
+            app:argType="com.marsrealestate.network.MarsProperty"
+            />
     </fragment>
 
 </navigation>
